# lium-core

./: .gitignore  pyproject.toml
.github/workflows/: release.yml
src/lium_core/shared_config/: __init__.py  client.py  defaults.py  model.py  utils.py
tests/: test_shared_config.py
