[project]
name = "lium-core"
version = "0.1.1"
description = "Shared core library for Lium platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lium_core"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
